[package]
name = "lc00012_interger_to_roman"
version = "0.1.0"
edition = "2021"

[dependencies]
basic_data_structures = {path = "../basic_data_structures"}

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
basic_data_structures = {path = "../basic_data_structures"}
basic_test_utilities = {path = "../basic_test_utilities"}
basic_test_macro = {path = "../basic_test_macro"}
   